<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_Boiler" Id="{9f6c2382-8539-464b-a74f-a60f632b839b}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	bRelaisBoiler 		AT %Q*	: BOOL;	(* Geschakeld stopcontact *)
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>